Rework docker compose dev. Now has a default environment with all database, redis and debugging env variables available

--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -1,11 +1,23 @@
-version: "3"
+
+x-default-environment: &default-environment
+  MESSAGE_BUS_HOST: redis
+  CACHE_HOST: redis
+  CACHE_PORT: 6379
+  DATABASE_HOST: postgres
+  DATABASE_PORT: 5432
+  DATABASE_NAME: openslides
+  DATABASE_USER: openslides
+  PGPASSWORD: openslides
+  OPENSLIDES_DEVELOPMENT: 1
+
 services:
   postgres:
     image: postgres:15
     environment:
-      - POSTGRES_USER=openslides
-      - POSTGRES_PASSWORD=openslides
-      - POSTGRES_DB=openslides
+      << : *default-environment
+      POSTGRES_USER: openslides
+      POSTGRES_PASSWORD: openslides
+      POSTGRES_DB: openslides
 
   client:
     build:
@@ -16,7 +28,7 @@ services:
     image: openslides-client-dev
     env_file: services.env
     environment:
-      - OPENSLIDES_DEVELOPMENT=1
+      << : *default-environment
     volumes:
       - ../../openslides-client/client/src:/app/src
       - ../../openslides-client/client/cli:/app/cli
@@ -37,17 +49,17 @@ services:
       - "9003:9003"
       - "5678:5678"
     environment:
-      - OPENSLIDES_DEVELOPMENT=1
-      - EMAIL_HOST=mailhog
-      - EMAIL_PORT=1025
+      << : *default-environment
+      EMAIL_HOST: mailhog
+      EMAIL_PORT: 1025
       # - EMAIL_HOST_USER username
       # - EMAIL_HOST_PASSWORD secret
       # EMAIL_CONNECTION_SECURITY use NONE, STARTTLS or SSL/TLS
-      - EMAIL_CONNECTION_SECURITY=NONE
-      - EMAIL_TIMEOUT=5
-      - EMAIL_ACCEPT_SELF_SIGNED_CERTIFICATE=false
-      - DEFAULT_FROM_EMAIL=noreply@example.com
-      - OPENSLIDES_BACKEND_CREATE_INITIAL_DATA=1
+      EMAIL_CONNECTION_SECURITY: NONE
+      EMAIL_TIMEOUT: 5
+      EMAIL_ACCEPT_SELF_SIGNED_CERTIFICATE: false
+      DEFAULT_FROM_EMAIL: noreply@example.com
+      OPENSLIDES_BACKEND_CREATE_INITIAL_DATA: 1
     volumes:
       - ../../openslides-backend/openslides_backend:/app/openslides_backend
       - ../../openslides-backend/tests:/app/tests
@@ -67,8 +79,8 @@ services:
       - redis
     env_file: services.env
     environment:
-      - OPENSLIDES_DEVELOPMENT=1
-      - DATASTORE_TIMEOUT=30
+      << : *default-environment
+      DATASTORE_TIMEOUT: 30
     volumes:
       - ../../openslides-autoupdate-service/cmd:/app/openslides-autoupdate-service/cmd
       - ../../openslides-autoupdate-service/internal:/app/openslides-autoupdate-service/internal
@@ -90,7 +102,7 @@ services:
       - auth
     env_file: services.env
     environment:
-      - OPENSLIDES_DEVELOPMENT=1
+      << : *default-environment
     volumes:
       - ../../openslides-icc-service/cmd:/app/openslides-icc-service/cmd
       - ../../openslides-icc-service/internal:/app/openslides-icc-service/internal
@@ -112,7 +124,7 @@ services:
       - postgres
     env_file: services.env
     environment:
-      - OPENSLIDES_DEVELOPMENT=1
+      << : *default-environment
     volumes:
       - ../../openslides-search-service/cmd:/app/openslides-search-service/cmd
       - ../../openslides-search-service/pkg:/app/openslides-search-service/pkg
@@ -132,7 +144,7 @@ services:
       - redis
     env_file: services.env
     environment:
-      - OPENSLIDES_DEVELOPMENT=1
+      << : *default-environment
     volumes:
       - ../../openslides-auth-service/auth/src:/app/src
     ports:
@@ -150,7 +162,7 @@ services:
       - postgres
     env_file: services.env
     environment:
-      - OPENSLIDES_DEVELOPMENT=1
+      << : *default-environment
     volumes:
       - ../../openslides-media-service/src:/app/src
 
@@ -165,7 +177,7 @@ services:
       - auth
     env_file: services.env
     environment:
-      - OPENSLIDES_DEVELOPMENT=1
+      << : *default-environment
     ports:
       - "9008:9008"
 
@@ -173,6 +185,8 @@ services:
     image: redis:alpine
     ports:
       - "6379:6379"
+    environment:
+      << : *default-environment
 
   proxy:
     build:
@@ -181,6 +195,8 @@ services:
         args:
             CONTEXT: "dev"
     image: openslides-proxy-dev
+    environment:
+      << : *default-environment
     depends_on:
       - client
       - backend
@@ -190,6 +206,8 @@ services:
 
   mailhog:
     image: mailhog/mailhog
+    environment:
+      << : *default-environment
     logging:
       driver: "none" # disable saving logs
     ports:
@@ -208,8 +226,8 @@ services:
       - postgres
     env_file: services.env
     environment:
-      - OPENSLIDES_DEVELOPMENT=1
-      - VOTE_DISABLE_LOG=true
+      << : *default-environment
+      VOTE_DISABLE_LOG: true
     volumes:
       - ../../openslides-vote-service/cmd:/app/openslides-vote-service/cmd
       - ../../openslides-vote-service/internal:/app/openslides-vote-service/internal
