--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -169,6 +169,26 @@ services:
     ports:
       - "9050:9050"
 
+  projector:
+    image: openslides-projector-dev
+    depends_on:
+      - autoupdate
+      - backend
+      - postgres
+    env_file: services.env
+    environment:
+      - OPENSLIDES_DEVELOPMENT=1
+    volumes:
+      - ../../openslides-projector-service/cmd:/root/openslides-projector-service/cmd
+      - ../../openslides-projector-service/pkg:/root/openslides-projector-service/pkg
+      - ../../openslides-projector-service/locale:/root/openslides-projector-service/locale
+      - ../../openslides-projector-service/templates:/root/openslides-projector-service/templates
+      - ../../openslides-projector-service/web:/root/openslides-projector-service/web
+      - ../../lib/openslides-go:/root/lib/openslides-go
+      - ./workspaces/projector.work:/root/go.work
+    ports:
+      - "9051:9051"
+
   auth:
     build:
         context: ../../openslides-auth-service
