remove entrypoint.sh from shell exec (#7060)
* remove entrypoint.sh from backend shell exec

* update vote service submodule hash

* readd legacy datastore to config yml
---------

Co-authored-by: peb-adr <adrian@intevation.de>

--- a/dev/localprod/config.yml
+++ b/dev/localprod/config.yml
@@ -4,6 +4,14 @@ defaults:
   tag: prod
 
 services:
+  # Datastore entries are a dirty fix, because manage tool still has it in compose template.
+  # Please remove as soon as openslides-manage-service is removed 
+  datastoreReader:
+    containerRegistry: ghcr.io/openslides/openslides
+    tag: latest
+  datastoreWriter:
+    containerRegistry: ghcr.io/openslides/openslides
+    tag: latest
   proxy:
     additionalContent:
       build: ../../openslides-proxy/
